[package]
name = "trackable_derive"
version = "0.1.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Custom derive for `trackable` crate"
homepage = "https://github.com/sile/trackable_derive"
repository = "https://github.com/sile/trackable_derive"
readme = "README.md"
keywords = ["trackable", "custom-derive"]
license = "MIT"

[badges]
travis-ci = {repository = "sile/trackable_derive"}

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.15"

[dev-dependencies]
trackable = "0.2"

[lib]
proc-macro = true